[gd_scene load_steps=2 format=3 uid="uid://bbmde1mgrxm23"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_u4xr7"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_u4xr7")

[node name="TimerAfterHit" type="Timer" parent="."]
one_shot = true

[node name="TimerBeforeSpawn" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerAfterHit" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerBeforeSpawn" to="." method="_on_timer_timeout"]
